5.0.0 -> 5.1a1:
    - rse: fix PGP clearsign signature verification by correctly skipping RFC2440 "dash-escapes"
    - rse: fix line-continuation handling in macro definition parsing
    - rse: implement RPM Lua function util.textwrap() for auto-wrapping junks of larger text messages
    - rse: upgrade RPM Lua functions util.rmatch(), util.rsubst() and util.rsplit() to new lrexlib 2.2
    - rse: upgrade the RPM Lua extension lrexlib from ancient version 1.1x to latest version 2.2
    - jbj: permit opt-in network access using %_rpmgio macro.
    - jbj: fix: deny rpmioSlurp network access (like all other Fopen call's).
    - rse: add RPM Lua function rpm.slurp() for slurping in the whole content of a file or an URL
    - rse: add OSSP uuid support to RPM Lua via functions uuid.generate() and uuid.describe()
    - rpm.org: Assorted int -> size_t corrections for string lengths.
    - rpm.org: More assorted int -> size_t uses.

=============================================================================

5.0b4 -> 5.0.0:
    - rse: final polishing of NEWS document
    - rse: align "rpm [--verbose] --version" output with the syntax used in mostly all GNU tools nowadays
    - mgh: allow --ignoresize when doing an erase
    - rse: fix database configuration for recently added indices "Nvra" and "Sourcepkgid"
    - jbj: differentiate %warn and %error (now stops) behavior (from openpkg).
    - jbj: merge %{realpath:...}. won't hurt a thing (from openpkg).
    - jbj: set macro_BUFSIZ as 16K independent of BUFSIZ (from openpkg).
    - rse: add RPM Lua function util.rsplit() for flexibly splitting strings into tokens based on regex
    - rse: add rpmlogGetCallback() function to allow one to restore the complete rpmlog() callback information
    - rse: add rpmluaGetGlobalState() function to allow foreign code to further extend the RPM Lua environment
    - rse: add RPM Lua function rpm.verbose() to be able to check CLI option --verbose